add new notebooks

--- a/optimization/ETF_take_position.ipynb
+++ b/optimization/ETF_take_position.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-15T04:59:24.408424Z",
-     "start_time": "2024-10-15T04:59:23.790609Z"
+     "end_time": "2025-09-28T14:43:36.985939Z",
+     "start_time": "2025-09-28T14:43:35.444240Z"
     }
    },
    "cell_type": "code",
@@ -26,71 +26,56 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-15T04:59:26.031734Z",
-     "start_time": "2024-10-15T04:59:24.431689Z"
+     "end_time": "2025-09-28T14:44:19.671143Z",
+     "start_time": "2025-09-28T14:44:18.728192Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Load the data\n",
-    "etf_list = ['VXUS', 'VTI', 'IAU']\n",
+    "etf_list = ['VXUS', 'VTI','DBC']\n",
     "results = pd.DataFrame()\n",
-    "best_days = []\n",
+    "best_days_buy = []\n",
+    "best_days_sell = []\n",
     "for etf in etf_list:\n",
     "    etf_data = yf.download(etf, period='90d')\n",
     "    etf_data['day_name'] = etf_data.index.day_name()\n",
     "    etf_data['evol'] = etf_data['Close']/etf_data['Open']\n",
     "    evol_by_day = etf_data.groupby('day_name').mean()['evol']\n",
-    "    best_day = evol_by_day.idxmax()\n",
-    "    best_days.append(best_day)\n",
+    "    best_day_buy = evol_by_day.idxmax()\n",
+    "    best_days_buy.append(best_day_buy)\n",
+    "    best_day_sell = evol_by_day.idxmin()\n",
+    "    best_days_sell.append(best_day_sell)\n",
     "    \n",
     "results['ETF'] = etf_list\n",
-    "results['Best_day'] = best_days\n",
+    "results['Best day buy'] = best_days_buy\n",
+    "results['Best day sell'] = best_days_sell\n",
     "results"
    ],
    "id": "7a686bf89b43dd4c",
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%%**********************]  1 of 1 completed\n",
-      "[*********************100%%**********************]  1 of 1 completed"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/homebrew/Caskroom/miniforge/base/envs/py312/lib/python3.12/site-packages/yfinance/utils.py:782: FutureWarning: The 'unit' keyword in TimedeltaIndex construction is deprecated and will be removed in a future version. Use pd.to_timedelta instead.\n",
-      "  df.index += _pd.TimedeltaIndex(dst_error_hours, 'h')\n",
-      "/opt/homebrew/Caskroom/miniforge/base/envs/py312/lib/python3.12/site-packages/yfinance/utils.py:782: FutureWarning: The 'unit' keyword in TimedeltaIndex construction is deprecated and will be removed in a future version. Use pd.to_timedelta instead.\n",
-      "  df.index += _pd.TimedeltaIndex(dst_error_hours, 'h')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[*********************100%%**********************]  1 of 1 completed\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/homebrew/Caskroom/miniforge/base/envs/py312/lib/python3.12/site-packages/yfinance/utils.py:782: FutureWarning: The 'unit' keyword in TimedeltaIndex construction is deprecated and will be removed in a future version. Use pd.to_timedelta instead.\n",
-      "  df.index += _pd.TimedeltaIndex(dst_error_hours, 'h')\n"
+      "/var/folders/_n/nybmwjg90rxfzcynss3bqkr80000gp/T/ipykernel_33447/2154267223.py:7: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "  etf_data = yf.download(etf, period='90d')\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "/var/folders/_n/nybmwjg90rxfzcynss3bqkr80000gp/T/ipykernel_33447/2154267223.py:7: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "  etf_data = yf.download(etf, period='90d')\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "/var/folders/_n/nybmwjg90rxfzcynss3bqkr80000gp/T/ipykernel_33447/2154267223.py:7: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "  etf_data = yf.download(etf, period='90d')\n",
+      "[*********************100%***********************]  1 of 1 completed\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "    ETF Best_day\n",
-       "0  VXUS   Monday\n",
-       "1   VTI   Monday\n",
-       "2   IAU  Tuesday"
+       "    ETF Best day buy Best day sell\n",
+       "0  VXUS       Monday        Friday\n",
+       "1   VTI       Monday     Wednesday\n",
+       "2   DBC      Tuesday        Monday"
       ],
       "text/html": [
        "<div>\n",
@@ -112,7 +97,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>ETF</th>\n",
-       "      <th>Best_day</th>\n",
+       "      <th>Best day buy</th>\n",
+       "      <th>Best day sell</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -120,34 +106,37 @@
        "      <th>0</th>\n",
        "      <td>VXUS</td>\n",
        "      <td>Monday</td>\n",
+       "      <td>Friday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>VTI</td>\n",
        "      <td>Monday</td>\n",
+       "      <td>Wednesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>IAU</td>\n",
+       "      <td>DBC</td>\n",
        "      <td>Tuesday</td>\n",
+       "      <td>Monday</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-15T04:59:26.390613Z",
-     "start_time": "2024-10-15T04:59:26.389169Z"
+     "end_time": "2025-09-28T14:43:42.700390Z",
+     "start_time": "2025-09-28T14:43:42.698888Z"
     }
    },
    "cell_type": "code",
